Organized folders and added examples

--- a/3d/Makefile
+++ b/3d/Makefile
@@ -1,9 +1,9 @@
 OBJECTS = main.o core/al_engine.o core/graphics.o
 EXEC=engine.out
 $EXEC: $(OBJECTS)
-	gcc -Wall -o $(EXEC) -g $(OBJECTS) -lallegro -lallegro_ttf -lallegro_font -lallegro_primitives -lallegro_image -lm -lglut -lGL -lGLU
+	gcc -Wall -o $(EXEC) -g $(OBJECTS) -lallegro -lallegro_ttf -lallegro_font -lallegro_primitives -lm -lglut -lGL -lGLU
 debug: $(OBJECTS)
-	gcc -Wall -o $(EXEC) -g $(OBJECTS) -lallegro -lallegro_ttf -lallegro_font -lallegro_primitives -lallegro_image -lm -lglut -lGL -lGLU -g
+	gcc -Wall -o $(EXEC) -g $(OBJECTS) -lallegro -lallegro_ttf -lallegro_font -lallegro_primitives -lm -lglut -lGL -lGLU -g
 core/al_engine.o: core/al_engine.c
 	gcc -o core/al_engine.o -c core/al_engine.c
 core/graphics.o: core/graphics.c
